--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="work" class="container-showcase">
       <div class="showcase-flax">
         <div class="showcase-item">
-          <img src="gambar/gunung3.jpg" alt="" />
+          <img src="mafia tanah.jpeg" alt="" />
         </div>
         <div class="showcase-item">
           <h3>Laporkan Masalah Disekitar Anda</h3>
@@ -194,3 +194,4 @@
     </footer>
   </body>
 </html>
+
